--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "./node_modules/.bin/ts-node index.ts"
   },
-  "keywords": ["Typescript", "evtx"],
+  "keywords": [
+    "Typescript",
+    "evtx"
+  ],
   "repository": {
     "type": "git",
     "url": "git@github.com:gyungdal/evtr.git"
@@ -14,6 +17,7 @@
   "author": "Gyeongsik Kim",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^13.1.6",
     "express": "^4.17.1",
     "ts-node": "^8.6.1",
     "typescript": "^3.7.4"
